--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-    "name": "rn-package-installer",
-    "version": "1.0.1",
+    "name": "@npm_akash/rn-package-installer",
+    "version": "1.0.5",
     "description": "Interactive package installer for React and React Native",
     "type": "module",
     "main": "bin/cli.js",
     "bin": {
         "rn-package-installer": "bin/cli.js"
     },
-    "scripts": {
-        "postinstall": "node bin/cli.js"
-    },
+    "scripts": {},
     "keywords": [
         "react-native",
         "react",
@@ -17,11 +15,21 @@
         "installer",
         "packages"
     ],
-    "author": "Akash",
-    "license": "MIT",
     "dependencies": {
         "chalk": "^5.3.0",
         "execa": "^8.0.1",
         "inquirer": "^9.2.12"
-    }
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Akash562/package_installer.git"
+    },
+    "bugs": {
+        "url": "https://github.com/Akash562/package_installer/issues"
+    },
+    "author": "Akash",
+    "license": "MIT"
 }
